--- a/Trabalho_Consumo_Energia_vf.ipynb
+++ b/Trabalho_Consumo_Energia_vf.ipynb
@@ -7516,6 +7516,59 @@
         "print(\"Resposta: compare os FNs (alto rotulado como baixo) vs FPs (baixo rotulado como alto) acima; \"\n",
         "      \"o maior valor indica a classe com mais erros neste recorte.\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b135779c",
+      "metadata": {},
+      "source": [
+        "### 36. Importação e visualização inicial (por motivos de desempenho da nossa maquina, tivemos que diminuir pela metade o numeros de registros, pois nao esta abrindo)\n",
+        "- Use o widget CSV File Import para carregar o dataset Individual Household Electric Power\n",
+        "Consumption.\n",
+        "- Conecte ao widget Data Table para visualizar as primeiras linhas.\n",
+        "- Pergunta: quantas variáveis e registros aparecem?\n",
+        "\n",
+        "9 variaveis e 2 milhoes de registros.\n",
+        "\n",
+        "### 37. Amostragem de dados (1%)\n",
+        "- Use o widget Sample Data para selecionar uma amostra de 1% dos registros.\n",
+        "- Pergunta: a distribuição de Global_active_power na amostra é semelhante à base completa?\n",
+        "- Consulte: https://orangedatamining.com/widget-catalog/\n",
+        "\n",
+        "4.216, Sim ele segue a media.\n",
+        "\n",
+        "### 38. Distribuição do consumo\n",
+        "- Conecte ao widget Distribution e visualize Global_active_power.\n",
+        "- Pergunta: o consumo é concentrado em valores baixos ou há muitos registros de alto\n",
+        "consumo?\n",
+        "\n",
+        "O minimo é 3.7 e o maximo 4.7\n",
+        "\n",
+        "### 39. Relação entre variáveis elétricas\n",
+        "- Use o widget Scatter Plot para analisar Voltage (X) vs Global_intensity (Y).\n",
+        "- Pergunta: existe correlação visível?\n",
+        "\n",
+        "Existe sim:! [image.png](attachment:image.png)\n",
+        "\n",
+        "\n",
+        "### 40. Clustering com K-Means\n",
+        "- Aplique o widget k-Means com 3 clusters.\n",
+        "- Use como atributos Sub_metering_1, Sub_metering_2, Sub_metering_3.\n",
+        "- Visualize os grupos no Scatter Plot.\n",
+        "- Pergunta: cada cluster representa um padrão distinto de consumo doméstico?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0466f867",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8e1e9d89",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
