--- a/Trabalho_Consumo_Energia_vf.ipynb
+++ b/Trabalho_Consumo_Energia_vf.ipynb
@@ -7519,7 +7519,15 @@
     },
     {
       "cell_type": "markdown",
-      "id": "b135779c",
+      "id": "1155c58d",
+      "metadata": {},
+      "source": [
+        "# PARTE 4 – Exercícios no Orange Data Mining"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "bf4d46c3",
       "metadata": {},
       "source": [
         "### 36. Importação e visualização inicial (por motivos de desempenho da nossa maquina, tivemos que diminuir pela metade o numeros de registros, pois nao esta abrindo)\n",
@@ -7557,18 +7565,6 @@
         "- Visualize os grupos no Scatter Plot.\n",
         "- Pergunta: cada cluster representa um padrão distinto de consumo doméstico?"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "0466f867",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "id": "8e1e9d89",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
